[gd_scene load_steps=13 format=2]

[ext_resource path="res://layout/layout.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui/status_bar.gd" type="Script" id=2]
[ext_resource path="res://layout/layout_gui.gd" type="Script" id=3]
[ext_resource path="res://gui/settings_gui.gd" type="Script" id=4]
[ext_resource path="res://gui/main.gd" type="Script" id=5]
[ext_resource path="res://gui/ViewportContainer.gd" type="Script" id=6]
[ext_resource path="res://aestro-theme/aestro.tres" type="Theme" id=7]
[ext_resource path="res://tools/AsyncWindow.tscn" type="PackedScene" id=8]
[ext_resource path="res://tools/async_file_dalog.gd" type="Script" id=9]
[ext_resource path="res://tools/selector.gd" type="Script" id=10]
[ext_resource path="res://gui/version_label.gd" type="Script" id=11]
[ext_resource path="res://gui/notifications.gd" type="Script" id=12]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 7 )
script = ExtResource( 5 )
layout = NodePath("VBoxContainer2/HSplitContainer/LayoutGui/LayoutSplit/ViewportContainer/Viewport/Layout")
train_controller_container = NodePath("VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Trains/VBoxContainer/trains")
layout_controller_container = NodePath("VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Controllers/VBoxContainer/controllers")
connect_all_button = NodePath("VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/HBoxContainer/ConnectAllButton")
disconnect_all_button = NodePath("VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/HBoxContainer/DisconnectAllButton")
connect_ble_server_button = NodePath("VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/ConnectBLEServerButton")
add_train_hub_button = NodePath("VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Trains/VBoxContainer/AddTrainButton")
add_controller_hub_button = NodePath("VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Controllers/VBoxContainer/AddLayoutControllerButton")

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer2"]
margin_right = 1280.0
margin_bottom = 689.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer2/HSplitContainer"]
margin_right = 224.0
margin_bottom = 689.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/HSplitContainer/VSplitContainer"]
margin_right = 224.0
margin_bottom = 376.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer"]
margin_right = 224.0
margin_bottom = 27.0

[node name="ConnectAllButton" type="Button" parent="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/HBoxContainer"]
margin_right = 101.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Connect hubs"

[node name="DisconnectAllButton" type="Button" parent="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/HBoxContainer"]
margin_left = 105.0
margin_right = 224.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Disconnect hubs"

[node name="TabContainer" type="TabContainer" parent="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 224.0
margin_bottom = 345.0
mouse_filter = 1
size_flags_vertical = 3
tab_align = 0
use_hidden_tabs_for_min_size = true

[node name="Trains" type="ScrollContainer" parent="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 34.0
margin_right = -5.0
margin_bottom = -5.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Trains"]
margin_right = 214.0
margin_bottom = 31.0
size_flags_horizontal = 3

[node name="AddTrainButton" type="Button" parent="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Trains/VBoxContainer"]
margin_right = 214.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Add train hub"

[node name="trains" type="VBoxContainer" parent="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Trains/VBoxContainer"]
margin_top = 31.0
margin_right = 214.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Controllers" type="ScrollContainer" parent="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 34.0
margin_right = -5.0
margin_bottom = -5.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Controllers"]
margin_right = 214.0
margin_bottom = 31.0
size_flags_horizontal = 3

[node name="AddLayoutControllerButton" type="Button" parent="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Controllers/VBoxContainer"]
margin_right = 230.0
margin_bottom = 27.0
text = "Add layout controller hub"

[node name="controllers" type="VBoxContainer" parent="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Controllers/VBoxContainer"]
margin_top = 31.0
margin_right = 230.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Settings" type="VBoxContainer" parent="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 34.0
margin_right = -5.0
margin_bottom = -5.0
script = ExtResource( 4 )

[node name="GridContainer" type="GridContainer" parent="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings"]
margin_right = 230.0
margin_bottom = 89.0
columns = 2

[node name="RenderModeLabel" type="Label" parent="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings/GridContainer"]
margin_right = 95.0
margin_bottom = 27.0
text = "Render mode"

[node name="RenderModeOption" type="OptionButton" parent="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings/GridContainer"]
margin_left = 99.0
margin_right = 213.0
margin_bottom = 27.0
text = "cached (fast)"
items = [ "dynamic (slow)", null, false, 0, null, "cached (fast)", null, false, 1, null ]
selected = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PresetLabel" type="Label" parent="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings/GridContainer"]
margin_top = 31.0
margin_right = 95.0
margin_bottom = 58.0
text = "Color preset"

[node name="PresetSelector" type="OptionButton" parent="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings/GridContainer"]
margin_left = 99.0
margin_top = 31.0
margin_right = 213.0
margin_bottom = 58.0
script = ExtResource( 10 )
has_none = false

[node name="PresetAddButton" type="Button" parent="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings/GridContainer"]
margin_top = 62.0
margin_right = 95.0
margin_bottom = 89.0
text = "Add preset"

[node name="PresetRemoveButton" type="Button" parent="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings/GridContainer"]
margin_left = 99.0
margin_top = 62.0
margin_right = 213.0
margin_bottom = 89.0
text = "Remove preset"

[node name="BackgroundColor" type="ColorPickerButton" parent="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings"]
margin_top = 93.0
margin_right = 230.0
margin_bottom = 120.0
size_flags_horizontal = 3

[node name="SurfaceColor" type="ColorPickerButton" parent="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings"]
margin_top = 124.0
margin_right = 230.0
margin_bottom = 151.0

[node name="PrimaryColor" type="ColorPickerButton" parent="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings"]
margin_top = 155.0
margin_right = 230.0
margin_bottom = 182.0

[node name="SecondaryColor" type="ColorPickerButton" parent="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings"]
margin_top = 186.0
margin_right = 230.0
margin_bottom = 213.0

[node name="TertiaryColor" type="ColorPickerButton" parent="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings"]
margin_top = 217.0
margin_right = 230.0
margin_bottom = 244.0

[node name="WhiteColor" type="ColorPickerButton" parent="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings"]
margin_top = 248.0
margin_right = 230.0
margin_bottom = 275.0

[node name="PresetNameDialog" parent="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings" instance=ExtResource( 8 )]

[node name="ConnectBLEServerButton" type="Button" parent="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer"]
margin_top = 349.0
margin_right = 224.0
margin_bottom = 376.0
text = "Connect BLE Server"

[node name="Notifications" type="VBoxContainer" parent="VBoxContainer2/HSplitContainer/VSplitContainer"]
margin_top = 384.0
margin_right = 224.0
margin_bottom = 689.0
size_flags_horizontal = 3
script = ExtResource( 12 )

[node name="AcceptDialog" type="AcceptDialog" parent="VBoxContainer2/HSplitContainer/VSplitContainer/Notifications"]
margin_top = 31.0
margin_right = 83.0
margin_bottom = 109.0
window_title = "Info"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer2/HSplitContainer/VSplitContainer/Notifications"]
margin_right = 224.0
margin_bottom = 274.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NotificationContainer" type="VBoxContainer" parent="VBoxContainer2/HSplitContainer/VSplitContainer/Notifications/ScrollContainer"]
margin_right = 224.0
size_flags_horizontal = 3

[node name="ClearButton" type="Button" parent="VBoxContainer2/HSplitContainer/VSplitContainer/Notifications"]
margin_top = 278.0
margin_right = 224.0
margin_bottom = 305.0
text = "Clear"

[node name="LayoutGui" type="HSplitContainer" parent="VBoxContainer2/HSplitContainer"]
margin_left = 232.0
margin_right = 1280.0
margin_bottom = 689.0
split_offset = -202
script = ExtResource( 3 )
inspector_container = NodePath("VSplitContainer/TabContainer/Inspector")
layer_container = NodePath("VSplitContainer/VBoxContainer/LayerContainer")
layer_index_edit = NodePath("VSplitContainer/VBoxContainer/HBoxContainer/layer_index_edit")
edit_tab_path = NodePath("LayoutSplit/LayoutModeTabs/Edit layout")
control_tab_path = NodePath("LayoutSplit/LayoutModeTabs/Run trains")

[node name="LayoutSplit" type="VBoxContainer" parent="VBoxContainer2/HSplitContainer/LayoutGui"]
margin_right = 722.0
margin_bottom = 689.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LayoutModeTabs" type="TabContainer" parent="VBoxContainer2/HSplitContainer/LayoutGui/LayoutSplit"]
margin_right = 722.0
margin_bottom = 66.0
tab_align = 0
use_hidden_tabs_for_min_size = true

[node name="Edit layout" type="HBoxContainer" parent="VBoxContainer2/HSplitContainer/LayoutGui/LayoutSplit/LayoutModeTabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 34.0
margin_right = -5.0
margin_bottom = -5.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer2/HSplitContainer/LayoutGui/LayoutSplit/LayoutModeTabs/Edit layout"]
margin_right = 52.0
margin_bottom = 27.0
text = "Layout"

[node name="LayoutNew" type="Button" parent="VBoxContainer2/HSplitContainer/LayoutGui/LayoutSplit/LayoutModeTabs/Edit layout"]
margin_left = 56.0
margin_right = 96.0
margin_bottom = 27.0
text = "New"

[node name="LayoutSave" type="Button" parent="VBoxContainer2/HSplitContainer/LayoutGui/LayoutSplit/LayoutModeTabs/Edit layout"]
margin_left = 100.0
margin_right = 143.0
margin_bottom = 27.0
text = "Save"

[node name="LayoutOpen" type="Button" parent="VBoxContainer2/HSplitContainer/LayoutGui/LayoutSplit/LayoutModeTabs/Edit layout"]
margin_left = 147.0
margin_right = 193.0
margin_bottom = 27.0
text = "Open"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer2/HSplitContainer/LayoutGui/LayoutSplit/LayoutModeTabs/Edit layout"]
margin_left = 197.0
margin_right = 201.0
margin_bottom = 27.0

[node name="Run trains" type="HBoxContainer" parent="VBoxContainer2/HSplitContainer/LayoutGui/LayoutSplit/LayoutModeTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 34.0
margin_right = -5.0
margin_bottom = -5.0
size_flags_horizontal = 3

[node name="StopAllButton" type="Button" parent="VBoxContainer2/HSplitContainer/LayoutGui/LayoutSplit/LayoutModeTabs/Run trains"]
margin_right = 87.0
margin_bottom = 27.0
text = "Stop routes"

[node name="EmergencyStopButton" type="Button" parent="VBoxContainer2/HSplitContainer/LayoutGui/LayoutSplit/LayoutModeTabs/Run trains"]
margin_left = 91.0
margin_right = 207.0
margin_bottom = 27.0
disabled = true
text = "Emergency stop"

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer2/HSplitContainer/LayoutGui/LayoutSplit/LayoutModeTabs/Run trains"]
margin_left = 211.0
margin_right = 215.0
margin_bottom = 27.0

[node name="ControlDevicesLabel" type="Label" parent="VBoxContainer2/HSplitContainer/LayoutGui/LayoutSplit/LayoutModeTabs/Run trains"]
margin_left = 219.0
margin_right = 328.0
margin_bottom = 27.0
text = "Control devices"

[node name="ControlDevicesSelector" type="OptionButton" parent="VBoxContainer2/HSplitContainer/LayoutGui/LayoutSplit/LayoutModeTabs/Run trains"]
margin_left = 332.0
margin_right = 394.0
margin_bottom = 27.0
text = "None"
items = [ "None", null, false, 0, null, "Switches", null, false, 1, null, "All", null, false, 2, null ]
selected = 0
script = ExtResource( 10 )
has_none = false

[node name="AutoTarget" type="CheckButton" parent="VBoxContainer2/HSplitContainer/LayoutGui/LayoutSplit/LayoutModeTabs/Run trains"]
margin_left = 398.0
margin_right = 560.0
margin_bottom = 27.0
text = "Random targets"

[node name="VSeparator4" type="VSeparator" parent="VBoxContainer2/HSplitContainer/LayoutGui/LayoutSplit/LayoutModeTabs/Run trains"]
margin_left = 564.0
margin_right = 568.0
margin_bottom = 27.0

[node name="Label" type="Label" parent="VBoxContainer2/HSplitContainer/LayoutGui/LayoutSplit/LayoutModeTabs/Run trains"]
margin_left = 572.0
margin_right = 620.0
margin_bottom = 27.0
text = "Speed"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer2/HSplitContainer/LayoutGui/LayoutSplit/LayoutModeTabs/Run trains"]
margin_left = 624.0
margin_right = 712.0
margin_bottom = 27.0
min_value = 0.01
max_value = 20.0
step = 0.01
value = 1.0
exp_edit = true

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer2/HSplitContainer/LayoutGui/LayoutSplit"]
margin_top = 70.0
margin_right = 722.0
margin_bottom = 689.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
script = ExtResource( 6 )

[node name="Viewport" type="Viewport" parent="VBoxContainer2/HSplitContainer/LayoutGui/LayoutSplit/ViewportContainer"]
size = Vector2( 722, 619 )
handle_input_locally = false
msaa = 2
fxaa = true
hdr = false
usage = 0
render_target_update_mode = 3

[node name="Layout" parent="VBoxContainer2/HSplitContainer/LayoutGui/LayoutSplit/ViewportContainer/Viewport" instance=ExtResource( 1 )]

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer2/HSplitContainer/LayoutGui"]
margin_left = 730.0
margin_right = 1048.0
margin_bottom = 689.0
split_offset = 348

[node name="TabContainer" type="TabContainer" parent="VBoxContainer2/HSplitContainer/LayoutGui/VSplitContainer"]
margin_right = 318.0
margin_bottom = 387.0

[node name="Inspector" type="ScrollContainer" parent="VBoxContainer2/HSplitContainer/LayoutGui/VSplitContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 34.0
margin_right = -5.0
margin_bottom = -5.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/HSplitContainer/LayoutGui/VSplitContainer"]
margin_top = 395.0
margin_right = 318.0
margin_bottom = 689.0

[node name="Label" type="Label" parent="VBoxContainer2/HSplitContainer/LayoutGui/VSplitContainer/VBoxContainer"]
margin_right = 318.0
margin_bottom = 27.0
text = "Layers"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2/HSplitContainer/LayoutGui/VSplitContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 318.0
margin_bottom = 58.0

[node name="add_layer_button" type="Button" parent="VBoxContainer2/HSplitContainer/LayoutGui/VSplitContainer/VBoxContainer/HBoxContainer"]
margin_right = 74.0
margin_bottom = 27.0
text = "Add layer"

[node name="layer_index_edit" type="SpinBox" parent="VBoxContainer2/HSplitContainer/LayoutGui/VSplitContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 81.0
margin_right = 157.0
margin_bottom = 27.0
min_value = -100.0
value = 1.0
rounded = true

[node name="remove_layer_button" type="Button" parent="VBoxContainer2/HSplitContainer/LayoutGui/VSplitContainer/VBoxContainer/HBoxContainer"]
margin_left = 78.0
margin_right = 179.0
margin_bottom = 27.0
text = "Remove layer"

[node name="LayerUnfoldCheckbox" type="CheckButton" parent="VBoxContainer2/HSplitContainer/LayoutGui/VSplitContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 318.0
margin_bottom = 89.0
text = "Unfolded view"

[node name="LayerContainer" type="ItemList" parent="VBoxContainer2/HSplitContainer/LayoutGui/VSplitContainer/VBoxContainer"]
margin_top = 93.0
margin_right = 318.0
margin_bottom = 294.0
size_flags_vertical = 3

[node name="SaveLayoutDialog" type="FileDialog" parent="VBoxContainer2/HSplitContainer/LayoutGui"]
margin_right = 700.0
margin_bottom = 400.0
rect_min_size = Vector2( 300, 105 )
window_title = "Save project"
resizable = true
access = 2
filters = PoolStringArray( "*.brl ; brickrail layout" )
script = ExtResource( 9 )

[node name="OpenLayoutDialog" type="FileDialog" parent="VBoxContainer2/HSplitContainer/LayoutGui"]
margin_right = 700.0
margin_bottom = 400.0
rect_min_size = Vector2( 300, 105 )
popup_exclusive = true
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.brl ; brickrail layout" )
script = ExtResource( 9 )

[node name="SaveConfirm" parent="VBoxContainer2/HSplitContainer/LayoutGui" instance=ExtResource( 8 )]

[node name="StatusGUI" type="HBoxContainer" parent="VBoxContainer2"]
unique_name_in_owner = true
margin_top = 693.0
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 2 )

[node name="StatusLabel" type="Label" parent="VBoxContainer2/StatusGUI"]
margin_right = 788.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "status message"

[node name="ProgressScrollbar" type="HScrollBar" parent="VBoxContainer2/StatusGUI"]
margin_left = 792.0
margin_top = 6.0
margin_right = 1092.0
margin_bottom = 20.0
rect_min_size = Vector2( 300, 0 )
size_flags_vertical = 4
min_value = 50.0
page = 15.0
value = 55.668

[node name="LayoutChangedLabel" type="Label" parent="VBoxContainer2/StatusGUI"]
margin_left = 1096.0
margin_right = 1221.0
margin_bottom = 27.0
text = "unsaved changes!"

[node name="VersionLabel" type="Label" parent="VBoxContainer2/StatusGUI"]
margin_left = 1225.0
margin_right = 1280.0
margin_bottom = 27.0
text = "version"
script = ExtResource( 11 )

[connection signal="pressed" from="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/HBoxContainer/ConnectAllButton" to="." method="_on_ConnectAllButton_pressed"]
[connection signal="pressed" from="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/HBoxContainer/DisconnectAllButton" to="." method="_on_DisconnectAllButton_pressed"]
[connection signal="pressed" from="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Trains/VBoxContainer/AddTrainButton" to="." method="_on_AddTrainButton_pressed"]
[connection signal="pressed" from="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Controllers/VBoxContainer/AddLayoutControllerButton" to="." method="_on_AddLayoutControllerButton_pressed"]
[connection signal="item_selected" from="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings/GridContainer/RenderModeOption" to="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings" method="_on_RenderModeOption_item_selected"]
[connection signal="meta_selected" from="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings/GridContainer/PresetSelector" to="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings" method="_on_PresetSelector_meta_selected"]
[connection signal="pressed" from="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings/GridContainer/PresetAddButton" to="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings" method="_on_PresetAddButton_pressed"]
[connection signal="pressed" from="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings/GridContainer/PresetRemoveButton" to="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings" method="_on_PresetRemoveButton_pressed"]
[connection signal="color_changed" from="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings/BackgroundColor" to="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings" method="_on_BackgroundColor_color_changed"]
[connection signal="color_changed" from="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings/SurfaceColor" to="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings" method="_on_SurfaceColor_color_changed"]
[connection signal="color_changed" from="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings/PrimaryColor" to="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings" method="_on_PrimaryColor_color_changed"]
[connection signal="color_changed" from="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings/SecondaryColor" to="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings" method="_on_SecondaryColor_color_changed"]
[connection signal="color_changed" from="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings/TertiaryColor" to="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings" method="_on_TertiaryColor_color_changed"]
[connection signal="color_changed" from="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings/WhiteColor" to="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/TabContainer/Settings" method="_on_WhiteColor_color_changed"]
[connection signal="pressed" from="VBoxContainer2/HSplitContainer/VSplitContainer/VBoxContainer/ConnectBLEServerButton" to="." method="_on_ConnectBLEServerButton_pressed"]
[connection signal="tab_changed" from="VBoxContainer2/HSplitContainer/LayoutGui/LayoutSplit/LayoutModeTabs" to="VBoxContainer2/HSplitContainer/LayoutGui" method="_on_LayoutModeTabs_tab_changed"]
[connection signal="pressed" from="VBoxContainer2/HSplitContainer/LayoutGui/LayoutSplit/LayoutModeTabs/Edit layout/LayoutNew" to="VBoxContainer2/HSplitContainer/LayoutGui" method="_on_LayoutNew_pressed"]
[connection signal="pressed" from="VBoxContainer2/HSplitContainer/LayoutGui/LayoutSplit/LayoutModeTabs/Edit layout/LayoutSave" to="VBoxContainer2/HSplitContainer/LayoutGui" method="_on_LayoutSave_pressed"]
[connection signal="pressed" from="VBoxContainer2/HSplitContainer/LayoutGui/LayoutSplit/LayoutModeTabs/Edit layout/LayoutOpen" to="VBoxContainer2/HSplitContainer/LayoutGui" method="_on_LayoutOpen_pressed"]
[connection signal="pressed" from="VBoxContainer2/HSplitContainer/LayoutGui/LayoutSplit/LayoutModeTabs/Run trains/StopAllButton" to="VBoxContainer2/HSplitContainer/LayoutGui" method="_on_StopAllButton_pressed"]
[connection signal="pressed" from="VBoxContainer2/HSplitContainer/LayoutGui/LayoutSplit/LayoutModeTabs/Run trains/EmergencyStopButton" to="VBoxContainer2/HSplitContainer/LayoutGui" method="_on_EmergencyStopButton_pressed"]
[connection signal="item_selected" from="VBoxContainer2/HSplitContainer/LayoutGui/LayoutSplit/LayoutModeTabs/Run trains/ControlDevicesSelector" to="VBoxContainer2/HSplitContainer/LayoutGui" method="_on_ControlDevicesSelector_item_selected"]
[connection signal="toggled" from="VBoxContainer2/HSplitContainer/LayoutGui/LayoutSplit/LayoutModeTabs/Run trains/AutoTarget" to="VBoxContainer2/HSplitContainer/LayoutGui" method="_on_AutoTarget_toggled"]
[connection signal="value_changed" from="VBoxContainer2/HSplitContainer/LayoutGui/LayoutSplit/LayoutModeTabs/Run trains/SpinBox" to="VBoxContainer2/HSplitContainer/LayoutGui" method="_on_SpinBox_value_changed"]
[connection signal="pressed" from="VBoxContainer2/HSplitContainer/LayoutGui/VSplitContainer/VBoxContainer/HBoxContainer/add_layer_button" to="VBoxContainer2/HSplitContainer/LayoutGui" method="_on_add_layer_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/HSplitContainer/LayoutGui/VSplitContainer/VBoxContainer/HBoxContainer/remove_layer_button" to="VBoxContainer2/HSplitContainer/LayoutGui" method="_on_remove_layer_button_pressed"]
[connection signal="toggled" from="VBoxContainer2/HSplitContainer/LayoutGui/VSplitContainer/VBoxContainer/LayerUnfoldCheckbox" to="VBoxContainer2/HSplitContainer/LayoutGui" method="_on_LayerUnfoldCheckbox_toggled"]
